# bevy-studio

./: README.md
backend/: Cargo.toml
backend/docker/: Dockerfile  test.sh
backend/src/: auth.rs  build.rs  github.rs  jobs.rs  main.rs  users.rs
backend/src/auth/: github.rs  mod.rs  routes.rs
backend/src/db/: users.rs
backend/src/files/: db.rs  mod.rs  routes.rs  storage.rs
backend/src/projects/: db.rs  mod.rs  routes.rs  utils.rs
backend/src/users/: db.rs  mod.rs  routes.rs
builder/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
builder/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AuthenticationContext.tsx  Test.tsx  index.tsx
frontend/src/types/: User.tsx
studio/: Cargo.toml
