[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
hyper = "0.14.18"
mongodb = { version = "2.2.1", default-features = false ,features = ["async-std-runtime"]}
jsonwebtoken = "8.1.0"
chrono = "0.4.19"
