[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"
hyper = "0.14.18"
jsonwebtoken = "8.1.0"
chrono = "0.4.19"
bollard = "0.12"
rbatis = { version = "3.1.7", default-features = false, features = ["runtime-tokio-rustls","mysql"] }
rbson = "2.0"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
rusoto_signature = "0.48.0"
rusoto_credential = "0.48.0"
async-trait = "0.1.53"