[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
rusoto_signature = "0.48.0"
rusoto_credential = "0.48.0"
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
